--- a/src/app/Cargo.toml
+++ b/src/app/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "ex6_backend"
+name = "app"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["rlib"]
 
 [dependencies]
 candid = "0.10"
-ic-cdk = "0.17"
-ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
+ic-stable-structures = "0.6"
+serde = { version = "1", features = ["derive"] }
+staging_memory = { path = "../staging_memory" }
